Zelenium Product Changelog

  Zelenium-0.3.1 (2005/04/26)

    - CVS tag:  'Zelenium-0_3_1'

    - Record server-side data during 'postResults':  Zope version string,
      product names and versions.

    - Captured additional request parameters in 'postResults':  user agent,
      HTTP host, remote address).

  Zelenium-0.3 (2005/04/25)

    - CVS tag:  'Zelenium-0_3'

    - Added 'postResults' handling code to capture results as a sub-
      folder of the suite.

  Zelenium-0.2.1 (2005/04/21)

    - CVS tag:  'Zelenium-0_2_1'

    - Correct the emitted HTML for input widgets (close the <tr> tag).

    - Fix unpack bug in code which punts on requests to "foreign" hosts.

    - Punt on handling XML-RPC requests (e.g., Epoz calls back to the
      server to run Tidy).

  Zelenium-0.2 (2005/04/20)

    - CVS tag:  'Zelenium-0_2'

    - Added script, 'generator.py', to create Selenium testcase files
      from the request / response logfiles created by tcpwatch.

    - Allowed test cases to be PageTemplates, as well as Files, to permit
      indirecting through properties of the test suite (e.g., for
      user id / password).

  Zelenium-0.1 (2005/04/15)

    - CVS tag:  'Zelenium-0_1'

    - Initial release