@@ -1,5 +1,16 @@
 Zelenium Product Changelog
 
+  After Zelenium-0.3.1
+ 
+    - Force Zuite objects to show order support, even in the presence of
+      ExternalEditor, whose monkey patching seems to trip it up.  Surface
+      the EE icon, if the product is available
+
+      Note:  we are *forking* OFS/dtml/main.dtml and the version in
+      ExteranalEditor/manage_main.dtml to surface order support, which
+      is a pretty brutal hack.  We should probably get ExteranalEditor
+      fixed, instead, and rip out the forked copy.
+
   Zelenium-0.3.1 (2005/04/26)
 
     - CVS tag:  'Zelenium-0_3_1'
